--- a/views/base/header.html
+++ b/views/base/header.html
@@ -9,9 +9,7 @@
         content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-title" content="哈哈笑">
     <meta http-equiv="Cache-Control" content="no-siteapp">
-    <title>
-        哈哈笑,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享
-    </title>
+    <title>app1</title>
     <link rel='dns-prefetch' href='//s.w.org' />
     <meta name="keywords"
         content="哈哈笑,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享">
