--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,8 @@
 {{>header}}
 {{>menu}}
------------
-{{a}}|{{b}}
------------
+-----------<br>
+{{#rows}}
+{{id}}|{{name}}|{{enabled}}<br>
+{{/rows}}
+-----------<br>
 {{>footer}}
