--- a/views/base/header.html
+++ b/views/base/header.html
@@ -26,6 +26,8 @@
     <link rel="shortcut icon" href="http://www.yusuan123.com/favicon.ico">
     <!--[if lt IE 9]><script src="http://www.yusuan123.com/wp-content/themes/bdidq/js/libs/html5.min.js"></script><![endif]-->
 
+    <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel='stylesheet'  href='/static/css/base.css' type='text/css' media='all' />
 </head>
 
 <body>
