--- a/views/base/footer.html
+++ b/views/base/footer.html
@@ -1,3 +1,11 @@
+<footer class="footer">
+  <div class="container" _hover-ignore="1">
+    <p>© 2019-2020 <a href="">哈哈笑</a> &nbsp; <a
+        href="">.网站地图</a> 京ICP备13025439号-1.
+    </p>
+    <a href="" target="_blank" title="站长统计">站长统计</a>
+  </div>
+</footer>
 </body>
 
 </html>
