--- a/views/base/header.html
+++ b/views/base/header.html
@@ -28,6 +28,7 @@
 
     <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet'  href='/static/css/base.css' type='text/css' media='all' />
+    <link rel='stylesheet'  href='/static/css/main.css' type='text/css' media='all' />
 </head>
 
 <body>
