--- a/views/base/menu.html
+++ b/views/base/menu.html
@@ -48,5 +48,9 @@
         <i class="fa fa-angle-down faa"></i>
     </li>
     <li class="menu-item"><a href="#">网站公告</a></li>
-    <li class="navto-search"><a href="#"></i></a></li>
+    <li class="navto-search">
+        <a href="javascript:;" class="search-show active" _hover-ignore="1">
+            <i class="fa fa-search" _hover-ignore="1"></i>
+        </a>
+    </li>
 </ul>
