--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,12 @@
     <div class="center-content homeCenter-content">
         {{#list}}
         <article class="excerpt">
-            <a class="thumb" href="{{id}}" target="_blank">
+            <a class="thumb" href="/{{id}}" target="_blank">
                 <img alt="" src="">
             </a>
             <header>
                 <a class="cat" href="">综合资料分享<i></i></a>
-                <h2><a target="_blank" href="{{id}}" title="">{{title}}</a></h2>
+                <h2><a target="_blank" href="/{{id}}" title="">{{title}}</a></h2>
             </header>
             <p class="meta">
                 <time><i class="fa fa-clock-o"></i>{{datetime}}</time>
