--- a/views/base/header.html
+++ b/views/base/header.html
@@ -31,4 +31,4 @@
     <link rel='stylesheet'  href='/static/css/main.css' type='text/css' media='all' />
 </head>
 
-<body>
+<body class="search-on">
