--- a/views/base/menu.html
+++ b/views/base/menu.html
@@ -50,7 +50,8 @@
     <li class="menu-item"><a href="#">网站公告</a></li>
     <li class="navto-search">
         <a href="javascript:;" class="search-show active" _hover-ignore="1">
-            <i class="fa fa-search" _hover-ignore="1"></i>
+            <i class="fa fa-search"></i>
+            <i class="fa fa-search fa-remove"></i>
         </a>
     </li>
 </ul>
