--- a/views/base/footer.html
+++ b/views/base/footer.html
@@ -6,6 +6,8 @@
     <a href="" target="_blank" title="站长统计">站长统计</a>
   </div>
 </footer>
+<script src="/static/js/jquery-3.4.1/jquery-3.4.1.js"></script>
+<script src="/static/js/main.js"></script>
 </body>
 
 </html>
