--- a/views/base/menu.html
+++ b/views/base/menu.html
@@ -48,10 +48,10 @@
         <i class="fa fa-angle-down faa"></i>
     </li>
     <li class="menu-item"><a href="#">网站公告</a></li>
-    <li class="navto-search">
+    <li class="menu-item">
         <a href="javascript:;" class="search-show active" _hover-ignore="1">
-            <i class="fa fa-search"></i>
-            <i class="fa fa-search fa-remove"></i>
+            <i class="fa fa-search" onclick="switchSearch()"></i>
+            <i class="fa fa-search fa-remove" onclick="switchSearch()"></i>
         </a>
     </li>
 </ul>
