--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,7 +79,7 @@ body {
 
 /* top ===================== */
 .fa-search{
-    font-size: 18px;
+    font-size: 18px !important;
     color: #f00;
 }
 
@@ -90,22 +90,25 @@ body {
 }
 
 .menu-item {
-    padding: 5px 12px;
+    padding: 0px 12px;
     position: relative;
     word-break: keep-all;
     font-size: 18px;
+
+    height: 30px;
+    line-height: 30px;
 }
 
 .sub-menu {
     display: none;
     position: absolute;
-    left: 0px;
+    left: 5px;
     top: 100%;
     padding-bottom: 5px;
     background-color: #fff;
     border: 1px solid #f99;
     border: 1px solid #fcc;
-    border-radius: 4px;
+    border-radius: 2px;
     box-shadow: 0px 2px 3px #ddd;
 }
 
