--- a/views/index.html
+++ b/views/index.html
@@ -28,12 +28,12 @@
 
         <div class="pagination">
             <ul>
-                <li class="prev-page"><a href="/list/3" _hover-ignore="1">上一页</a></li>
+                <li class="prev-page"><a href="/list/3">上一页</a></li>
                 <li><a href="/">1</a></li>
                 <li><a href="/list/2">2</a></li>
                 <li><a href="/list/3">3</a></li>
                 <li class="active"><span>4</span></li>
-                <li><a href="/list/5" _hover-ignore="1">5</a></li>
+                <li><a href="/list/5">5</a></li>
                 <li><a href="/list/6">6</a></li>
                 <li><a href="/list/7">7</a></li>
                 <li><span> ... </span></li>
