--- a/views/base/footer.html
+++ b/views/base/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-  <div class="container" _hover-ignore="1">
-    <p>© 2019-2020 <a href="">哈哈笑</a> &nbsp; <a
+  <div class="container">
+    <p>© 2019-2020 <a href="">自由学</a> &nbsp; <a
         href="">.网站地图</a> 京ICP备13025439号-1.
     </p>
     <a href="" target="_blank" title="站长统计">站长统计</a>
