--- a/views/base/header.html
+++ b/views/base/header.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=11,IE=10,IE=9,IE=8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="apple-mobile-web-app-title" content="哈哈笑">
+    <meta name="apple-mobile-web-app-title" content="自由学">
     <meta http-equiv="Cache-Control" content="no-siteapp">
-    <title>app1</title>
+    <title>自由学</title>
     <link rel='dns-prefetch' href='//s.w.org' />
     <meta name="keywords"
-        content="哈哈笑,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享">
+        content="自由学,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享">
     <meta name="description"
-        content="哈哈笑,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享">
+        content="自由学,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享">
 
     <link rel="icon" href="http://www.yusuan123.com/wp-content/uploads/2019/04/cropped-logo-32x32.png" sizes="32x32" />
     <link rel="icon" href="http://www.yusuan123.com/wp-content/uploads/2019/04/cropped-logo-192x192.png"
@@ -26,9 +26,9 @@
     <link rel="shortcut icon" href="http://www.yusuan123.com/favicon.ico">
     <!--[if lt IE 9]><script src="http://www.yusuan123.com/wp-content/themes/bdidq/js/libs/html5.min.js"></script><![endif]-->
 
-    <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel='stylesheet'  href='/static/css/base.css' type='text/css' media='all' />
+    <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css">    
     <link rel='stylesheet'  href='/static/css/main.css' type='text/css' media='all' />
+    <link rel='stylesheet'  href='/static/css/base.css' type='text/css' media='all' />
 </head>
 
 <body class="search-on">
