--- a/views/base/menu.html
+++ b/views/base/menu.html
@@ -49,7 +49,7 @@
     </li>
     <li class="menu-item"><a href="#">网站公告</a></li>
     <li class="menu-item">
-        <a href="javascript:;" class="search-show active" _hover-ignore="1">
+        <a href="javascript:;" class="search-show active">
             <i class="fa fa-search" onclick="switchSearch()"></i>
             <i class="fa fa-search fa-remove" onclick="switchSearch()"></i>
         </a>
