--- a/views/base/top.html
+++ b/views/base/top.html
@@ -1,12 +1,17 @@
-<header class="header" _hover-ignore="1">
+<header class="header top">
   <div class="container">
-    <div class="logo"><a href="http://www.yusuan123.com"
-        title="哈哈笑,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享"><img
+    <div class="logo">
+      <a href="http://www.yusuan123.com"
+        title="自由学,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享">
+        <!-- <img
           src="http://www.yusuan123.com/wp-content/uploads/2019/05/zhanbiao2.jpg"
-          alt="哈哈笑,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享"
-          _hover-ignore="1">哈哈笑</a></div>
-    <div class="brand" _hover-ignore="1">欢迎光临
-      <br>我们一直在努力
+          alt="自由学,网盘下载,考试视频课程,免费下载,优惠购物,股票基础知识,筑业工程资料软件,恒智天成软件,盛发通信工程预算软件,电力工程资料软件,学习方法,注册考试资料,免费领红包,免费网络课程,百度网盘下载,育儿知识,中学免费网课,高中免费课程,补习班知识分享"
+          > -->
+          自由学
+        </a>
+        </div>
+    <div class="brand">
+      学我想学<br>快乐自在
     </div>
     {{>menu}}
   </div>
@@ -15,16 +20,16 @@
 <div class="site-search">
   <div class="container">
     <form method="get" class="site-search-form" action="http://www.yusuan123.com/">
-      <input class="search-input" name="s" type="text" placeholder="输入关键字" value="" _hover-ignore="1">
+      <input class="search-input" name="s" type="text" placeholder="输入关键字" value="">
       <button class="search-btn" type="submit"><i class="fa fa-search"></i>
       </button>
     </form>
   </div>
 </div>
 
-<div class="breadcrumbs" _hover-ignore="1">
+<div class="breadcrumbs">
   <div class="container">当前位置：
-    <a href="http://www.yusuan123.com">哈哈笑</a>
+    <a href="http://www.yusuan123.com">自由学</a>
     <small>&gt;</small>
     <a href="http://www.yusuan123.com/category/jiaoyuxinxi">教育信息</a>
     <small>&gt;</small>
