--- a/views/base/top.html
+++ b/views/base/top.html
@@ -11,21 +11,11 @@
         </a>
         </div>
     <div class="brand">
-      学我想学<br>快乐自在
+      学想学<br>快乐自在
     </div>
     {{>menu}}
   </div>
 </header>
-
-<div class="site-search">
-  <div class="container">
-    <form method="get" class="site-search-form" action="http://www.yusuan123.com/">
-      <input class="search-input" name="s" type="text" placeholder="输入关键字" value="">
-      <button class="search-btn" type="submit"><i class="fa fa-search"></i>
-      </button>
-    </form>
-  </div>
-</div>
 
 <div class="breadcrumbs">
   <div class="container">当前位置：
@@ -35,5 +25,15 @@
     <small>&gt;</small>
     <a href="http://www.yusuan123.com/category/jiaoyuxinxi/xiaoxue-jiaoyuxinxi">小学教育</a>
     <small>&gt;</small> 正文
+  </div>
+</div>
+
+<div class="site-search">
+  <div class="container">
+    <form method="get" class="site-search-form" action="http://www.yusuan123.com/">
+      <input class="search-input" name="s" type="text" placeholder="输入关键字" value="">
+      <button class="search-btn" type="submit"><i class="fa fa-search"></i>
+      </button>
+    </form>
   </div>
 </div>
