--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,6 +32,8 @@ body {
     font-family: 'Microsoft Yahei';
     color: #555;
     line-height: 1.7em;
+
+    margin-top: 35px;
 }
 
 /*top ======================*/
@@ -104,6 +106,7 @@ body {
 
 .menu {
     display: flex;
+    padding-top: 5px;
 }
 
 .menu-item {
@@ -123,10 +126,11 @@ body {
     top: 100%;
     padding-bottom: 5px;
     background-color: #fff;
-    border: 1px solid #f99;
-    border: 1px solid #fcc;
     border-radius: 2px;
-    box-shadow: 0px 2px 3px #ddd;
+
+    border: 1px solid #eef;
+    border-radius: 2px;
+    box-shadow: 0px 2px 3px #eee;
 }
 
 .sub-menu .menu-item {
