--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 {{>header}} {{>top}}
 
 <div class="center">
-    <div class="center-content homeCenter-content">
+    <div class="center-content">
         {{#list}}
         <article class="excerpt">
             <a class="thumb" href="/{{id}}" target="_blank">
@@ -42,8 +42,9 @@
             </ul>
         </div>
     </div>
-    <div class="sidebar center-sidebar">广告</div>
+    <div class="center-sidebar">广告</div>
 </div>
+
 <!-- <div class="paging">
   {{total}}|{{pageIndex}}|{{pageSize}}
 </div> -->
