--- a/views/page.html
+++ b/views/page.html
@@ -1,8 +1,7 @@
 {{>header}} {{>top}}
 
 <div class="center">
-    <!-- <div class="content-wrap"> -->
-    <div class="content center-content">
+    <div class="center-content">
         <header class="article-header">
             <h1 class="article-title"><a href="">{{title}}</a>
             </h1>
@@ -55,7 +54,6 @@
             <span class="article-nav-next">下一篇<br><a href="" rel="next">2020年初一初二初三数学物理英语化学寒假班网络视频课程百度网盘下载</a></span>
         </nav>
     </div>
-    <!-- </div> -->
-    <div class="sidebar center-sidebar">广告</div>
+    <div class="center-sidebar">广告</div>
 </div>
 {{>footer}}
