--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
         {{#list}}
         <article class="excerpt">
             <a class="thumb" href="/{{id}}" target="_blank">
-                <img alt="" src="">
+                <img alt="" src="/static/images/excerpts/{{id}}-220x150.jpg">
             </a>
             <header>
                 <a class="cat" href="">综合资料分享<i></i></a>
@@ -20,8 +20,7 @@
                 </a>
             </p>
             <p class="note">
-                <!-- {content} -->
-                资源推荐：菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1资源推荐：菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1资源推荐：菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1菜品图片图库素材22W张高清菜图素材川菜湘菜粤菜菜谱图片1
+                {{intro}}
             </p>
         </article>
         {{/list}}
@@ -42,7 +41,7 @@
             </ul>
         </div>
     </div>
-    <div class="center-sidebar">广告</div>
+    <!-- <div class="center-sidebar">广告</div> -->
 </div>
 
 <!-- <div class="paging">
