--- a/views/page.html
+++ b/views/page.html
@@ -48,12 +48,11 @@
             <a href="" rel="tag">百度网盘</a>
         </div>
 
-
         <nav class="article-nav">
             <span class="article-nav-prev">上一篇<br><a href="" rel="prev">搞定公务员结构化面试只需要350题（绝密押提8类）百度网盘下载</a></span>
             <span class="article-nav-next">下一篇<br><a href="" rel="next">2020年初一初二初三数学物理英语化学寒假班网络视频课程百度网盘下载</a></span>
         </nav>
     </div>
-    <div class="center-sidebar">广告</div>
+    <!-- <div class="center-sidebar">广告</div> -->
 </div>
 {{>footer}}
