--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1252,6 +1252,8 @@ body {
     font-size: 15px;
     line-height: 25px;
     word-wrap: break-word;
+
+    padding: 0px 20px;
 }
 
 .article-content img {
